Add jest as dev dependency

--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "description": "A set of fun programming challenges in TypeScript. Intended as a learning exercise.",
   "scripts": {
-    "test": "test"
+    "test": "jest"
   },
   "author": "Giancarlo Anemone",
-  "license": "BSD-2-Clause"
+  "license": "BSD-2-Clause",
+  "devDependencies": {
+    "jest-cli": "~0.1.18"
+  }
 }
