--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "jest-cli": "~0.1.18"
+  },
+  "dependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-watch": "~0.6.1",
+    "typescript": "~1.3.0",
+    "grunt-typescript": "~0.4.4"
   }
 }
